Publish libraries that are run during compilation at target level 11 (#22)
Libraries from this repo that are used in compilation (`suppressible-error-prone`, `suppressible-error-prone-annotations`) are now targeted at JDK 11 rather than 17.